create_cluster/traefik/cheese-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.test-rig.net
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.test-rig.net
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.test-rig.net
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
